# echoes-deception

./: .gitignore  CMakeLists.txt  README.md  install.sh  setup.sh
include/: PathFinder.h  Pseudo3DPlane.h  RPG_Assets.h  RPG_Commands.h  RPG_Dynamic.h  RPG_Game.h  RPG_Maps.h  SimpleGameEngine.cpp  SimpleGameEngine.h  SimpleGameEngine.hpp
res/: home.txt  village.txt
src/: PathFinder.cpp  Pseudo3DPlane.cpp  RPG_Assets.cpp  RPG_Commands.cpp  RPG_Dynamic.cpp  RPG_Game.cpp  RPG_Maps.cpp  RPG_Maps.h  SimpleGameEngine.cpp  main.cpp
